--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -187,6 +187,12 @@ jobs:
         run: vagrant up
       - name: Test Fullstack
         run: ./ops/test_fullstack.py
+      - name: Save Screenshot
+        uses: swinton/screenshot-website@v1.x
+        with:
+          source: http://localhost:8080
+          destination: screenshot.png
+          full-page: true
 
   automerge:
     needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, fullstack-test]
