--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -187,6 +187,32 @@ jobs:
           name: web-build
           path: src/build
 
+  fullstack-test:
+    name: Fullstack Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2.3.0
+        with:
+          python-version: 3.8
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+      - name: Install Vagrant
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        run: sudo apt-get install vagrant
+      - name: Create keys file
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        run: cp tba_keys_template.js tba_keys.js
+      - name: Start Container
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        run: vagrant up
+      - name: Test Fullstack
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        run: ./ops/test_fullstack.py
+
   deploy-queues:
     name: Deploy Queues
     runs-on: ubuntu-latest
@@ -213,7 +239,7 @@ jobs:
   deploy-web:
     name: Deploy Web Service
     runs-on: ubuntu-latest
-    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, build-web, deploy-queues]
+    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, build-web, fullstack-test, deploy-queues]
     if: contains(github.event.commits[0].message, '[nodeploy]') == false
     steps:
       - uses: actions/checkout@v2.4.0
