--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -266,7 +266,7 @@ jobs:
   deploy-api:
     name: Deploy API Service
     runs-on: ubuntu-latest
-    needs: [py3-type, py3-lint, py3-test, deploy-queues]
+    needs: [py3-type, py3-lint, py3-test, fullstack-test, deploy-queues]
     if: contains(github.event.commits[0].message, '[nodeploy]') == false
     steps:
       - uses: actions/checkout@v2.4.0
@@ -288,7 +288,7 @@ jobs:
   deploy-tasks-io:
     name: Deploy Tasks IO Service
     runs-on: ubuntu-latest
-    needs: [py3-type, py3-lint, py3-test, deploy-queues]
+    needs: [py3-type, py3-lint, py3-test, fullstack-test, deploy-queues]
     if: contains(github.event.commits[0].message, '[nodeploy]') == false
     steps:
       - uses: actions/checkout@v2.4.0
