--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,12 @@
 gunicorn==20.1.0
 firebase_admin==5.1.0
 Flask==2.0.2
-Flask-Caching==1.10.1
+
+# use local version of flask-caching until
+# dynamic timeouts are supported
+# Flask-Caching==1.10.1
+./lib/flask-caching/Flask_Caching-1.11.0_tba.1-py3-none-any.whl
+
 Flask-Cors==3.0.10
 Flask-WTF==1.0.0
 google-api-python-client==2.31.0
