--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -18,10 +18,7 @@ dispatch:
   - url: "www.thebluealliance.com/event/*"
     service: py3-web
 
-  - url: "www.thebluealliance.com/teams"
-    service: py3-web
-
-  - url: "www.thebluealliance.com/team/*"
+  - url: "www.thebluealliance.com/team*"
     service: py3-web
 
   - url: "www.thebluealliance.com/match/*"
