--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -168,8 +168,34 @@ jobs:
       - name: Run Build
         run: ./ops/build/run_buildweb.sh --env
 
+  fullstack-test:
+    name: Fullstack Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2.3.0
+        with:
+          python-version: 3.8
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+      - name: Install Vagrant
+        run: sudo apt-get install vagrant
+      - name: Create keys file
+        run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
+      - name: Start Container
+        run: ENV='CI' vagrant up
+      - name: Test Fullstack
+        run: ./ops/test_fullstack.py
+      - name: Comment Webpage Screenshot
+        uses: saadmk11/comment-webpage-screenshot@v0.5
+        with:
+          capture_urls: "http://172.17.0.1:8080, http://172.17.0.1:8080/gameday"
+
   automerge:
-    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web]
+    needs: [py3-type, py3-lint, py3-test, node-lint, node-test, bash-lint, build-web, fullstack-test]
     runs-on: ubuntu-latest
     steps:
       - uses: fastify/github-action-merge-dependabot@v2.7.1
