--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -184,43 +184,37 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.8
-      # - name: Cache pip
-      #   uses: actions/cache@v2.1.7
-      #   with:
-      #     path: ~/.cache/pip
-      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #     restore-keys: ${{ runner.os }}-pip-
-      # - name: Install Python Dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
-      # - name: Set up Node
-      #   uses: actions/setup-node@v2.5.1
-      #   with:
-      #     node-version: "14"
-      # - name: Cache node modules
-      #   uses: actions/cache@v2.1.7
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: ${{ runner.os }}-node-
-      # - name: Install Node Dependencies
-      #   run: |
-      #     npm ci
-      #     npm install -g capture-website-cli
-      # - name: Install Vagrant
-      #   run: sudo apt-get install vagrant
-      # - name: Create keys file
-      #   run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
+      - name: Cache pip
+        uses: actions/cache@v2.1.7
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Set up Node
+        uses: actions/setup-node@v2.5.1
+        with:
+          node-version: "14"
+      - name: Cache node modules
+        uses: actions/cache@v2.1.7
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Install Node Dependencies
+        run: |
+          npm ci
+          npm install -g capture-website-cli
+      - name: Install Vagrant
+        run: sudo apt-get install vagrant
+      - name: Create keys file
+        run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      # - name: Cache Docker Layers
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: /tmp/.buildx-cache
-      #     key: ${{ runner.os }}-buildx-${{ hashFiles('./ops/dev/docker/Dockerfile') }}
-      #     restore-keys: ${{ runner.os }}-buildx-
       - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
@@ -231,20 +225,16 @@ jobs:
             type=gha
             ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
           cache-to: type=gha,mode=max
-      # - name: Move Docker Cache  # This is necessary to prevent cache from growing forever.
-      #   run: |
-      #     rm -rf /tmp/.buildx-cache
-      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-      # - name: Start Container
-      #   run: vagrant up
-      # - name: Test Vagrant Startup
-      #   run: ./ops/test_vagrant_startup.py
-      # - name: Test Ops Fullstack
-      #   run: ./ops/test_ops.sh
-      # - name: Capture screenshots
-      #   run: ./ops/pr_screenshots/capture_screenshots.py
-      # - name: Upload screenshots artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ci_screenshots
-      #     path: ci_screenshots.pickle
+      - name: Start Container
+        run: vagrant up
+      - name: Test Vagrant Startup
+        run: ./ops/test_vagrant_startup.py
+      - name: Test Ops Fullstack
+        run: ./ops/test_ops.sh
+      - name: Capture screenshots
+        run: ./ops/pr_screenshots/capture_screenshots.py
+      - name: Upload screenshots artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ci_screenshots
+          path: ci_screenshots.pickle
