--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -218,6 +218,21 @@ jobs:
       - name: Create keys file
         if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
+      - name: Set up Docker Buildx
+        id: buildx
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        uses: docker/setup-buildx-action@v1
+      - name: Build Docker Image
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: ./ops/dev/docker
+          tags: local/tba-py3-dev:latest
+          cache-from: |
+            type=gha
+            ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
+          cache-to: type=gha,mode=max
       - name: Start Container
         if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: vagrant up
