--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -42,6 +42,9 @@ dispatch:
 - url: "py3.thebluealliance.com/*"
   service: py3-web
 
+- url: "py2.thebluealliance.com/*"
+  service: default
+
 # Beta PWA
 - url: "beta.thebluealliance.com/*"
   service: pwa-ssr
@@ -50,10 +53,6 @@ dispatch:
 # Uses B2 instance for higher CPU/memory limits
 - url: "*/backend-tasks-b2/*"
   service: backend-tasks-b2
-
-# Endpoints for internal client API
-- url: "*/clientapi/*"
-  service: clientapi
 
 # Send everything else to default module
 - url: "*/"
