--- a/.github/workflows/push_py2.yml
+++ b/.github/workflows/push_py2.yml
@@ -137,18 +137,21 @@ jobs:
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Cache pip
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: ${{ runner.os }}-pip-
       - name: Cache node modules
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         uses: actions/cache@v2
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
       - name: Install Python Dependencies
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: |
           python -m pip install --upgrade pip
           pip install -r travis_requirements.txt
@@ -161,22 +164,30 @@ jobs:
           echo "PYTHONPATH=${PYTHONPATH}:${HOME}/google_appengine" >> $GITHUB_ENV
           echo "PATH=${PATH}:${HOME}/google_appengine" >> $GITHUB_ENV
       - name: Install Node Dependencies
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: |
           npm install
           npm install -g gulp-cli uglify-es uglifycss less request tslib
       - name: Create tba_keys.js file
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: ./ops/create_tba_keys_js_file.sh
       - name: Make
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: paver make
       - name: Deploy app.yaml
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: gcloud app deploy app.yaml --version prod-2 --quiet
       - name: Deploy app-backend-tasks-b2.yaml
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: gcloud app deploy app-backend-tasks-b2.yaml --version prod-2 --quiet
       - name: Deploy index.yaml
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: gcloud app deploy index.yaml --version prod-2 --quiet
       - name: Deploy queue.yaml
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: gcloud app deploy queue.yaml --version prod-2 --quiet
       - name: Deploy cron.yaml
+        if: contains(github.event.commits[0].message, '[dispatchonly]') == false
         run: gcloud app deploy cron.yaml --version prod-2 --quiet
       - name: Deploy dispatch.yaml
         run: gcloud app deploy dispatch.yaml --version prod-2 --quiet
