--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -30,6 +30,9 @@ dispatch:
 # APIv3 on py3
 - url: "www.thebluealliance.com/api/v3/status"
   service: py3-api
+  
+- url: "www.thebluealliance.com/api/v3/team*"
+  service: py3-api
 
 # Send low-frequency long-running tasks to backend module
 - url: "*/backend-tasks/*"
