--- a/cron.yaml
+++ b/cron.yaml
@@ -4,31 +4,26 @@ cron:
   schedule: every day 02:00
   timezone: America/Los_Angeles
 
-# - description: FIRST event detail scraping
-#   url: /tasks/enqueue/usfirst_event_details/2014
-#   schedule: every thursday 02:00
-#   timezone: America/Los_Angeles
+ - description: FIRST team detail scraping
+   url: /tasks/enqueue/fmsapi_team_details_rolling
+   schedule: every day 02:30
+   timezone: America/Los_Angeles
 
-# - description: FIRST team detail scraping
-#   url: /tasks/enqueue/fmsapi_team_details_rolling
-#   schedule: every day 02:00
-#   timezone: America/Los_Angeles
+- description: FIRST match scraping for current events
+  url: /tasks/enqueue/fmsapi_matches/now
+  schedule: every 1 minutes
 
-#- description: FIRST match scraping for current events
-#  url: /tasks/enqueue/fmsapi_matches/now
-#  schedule: every 1 minutes
+- description: FIRST event ranking scraping for current events
+  url: /tasks/enqueue/fmsapi_event_rankings/now
+  schedule: every 1 minutes
 
-#- description: FIRST event ranking scraping for current events
-#  url: /tasks/enqueue/fmsapi_event_rankings/now
-#  schedule: every 1 minutes
+- description: FIRST event alliance scraping for current events
+  url: /tasks/enqueue/fmsapi_event_alliances/now
+  schedule: every 30 minutes
 
-#- description: FIRST event alliance scraping for current events
-#  url: /tasks/enqueue/fmsapi_event_alliances/now
-#  schedule: every 30 minutes
-
-#- description: FIRST event alliance scraping for current events on their last day
-#  url: /tasks/enqueue/fmsapi_event_alliances/last_day_only
-#  schedule: every 5 minutes
+- description: FIRST event alliance scraping for current events on their last day
+  url: /tasks/enqueue/fmsapi_event_alliances/last_day_only
+  schedule: every 5 minutes
 
 - description: FIRST award scraping for current events
   url: /tasks/enqueue/fmsapi_awards/now
