--- a/.github/workflows/push_py2.yml
+++ b/.github/workflows/push_py2.yml
@@ -131,7 +131,7 @@ jobs:
         with:
           node-version: "10.x"
       - name: Setup Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: "321.0.0"
           project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
