--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -219,19 +219,19 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-        # with:
-        #   driver-opts: network=host
+        with:
+          driver-opts: network=host
       - name: Build Docker Image
         uses: docker/build-push-action@v2.10.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./ops/dev/docker
-          # push: true
-          # tags: localhost:5000/tba-py3-dev:latest
-          # cache-from: |
-          #   type=gha
-          #   ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
-          # cache-to: type=gha,mode=max
+          push: true
+          tags: localhost:5000/tba-py3-dev:latest
+          cache-from: |
+            type=gha
+            ghcr.io/the-blue-alliance/the-blue-alliance/tba-py3-dev:latest
+          cache-to: type=gha,mode=max
       - name: Start Container
         run: vagrant up
       - name: Test Vagrant Startup
