--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -24,10 +24,8 @@ dispatch:
 - url: "www.thebluealliance.com/suggest/*"
   service: py3-web
 
-- url: "www.thebluealliance.com/py3_css/*"
-  service: py3-web
-
-- url: "www.thebluealliance.com/py3_javascript/*"
+# match py3_css and py3_javascript
+- url: "www.thebluealliance.com/py3*"
   service: py3-web
     
 - url: "www.thebluealliance.com/watch/*"
