--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -21,8 +21,8 @@ dispatch:
 - url: "www.thebluealliance.com/match/*"
   service: py3-web
   
-- url: "www.thebluealliance.com/suggest/*"
-  service: py3-web
+#- url: "www.thebluealliance.com/suggest/*"
+#  service: py3-web
 
 # match py3_css and py3_javascript
 - url: "www.thebluealliance.com/py3*"
