--- a/ops/dev/docker/Dockerfile
+++ b/ops/dev/docker/Dockerfile
@@ -41,6 +41,9 @@ RUN apt-get update && apt-get install -y \
     google-cloud-sdk-datastore-emulator \
     google-cloud-sdk-pubsub-emulator
 
+# Install JDK 11 for firebase-tools
+RUN apt-get install default-jre -y
+
 # dev_appserver expects `python2` to exist
 RUN update-alternatives --install /usr/bin/python2 python2 /usr/bin/python2.7 1
 RUN echo 1 | update-alternatives --config python2
