--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,6 +10,7 @@ grpcio==1.46.1
 Jinja2==3.1.2
 numpy==1.22.3
 oauth2client==4.1.3
+protobuf==3.20.1
 pyre-extensions==0.0.27
 requests==2.27.1
 typing-extensions==4.2.0
